--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>小尼姑</h1>
-    <img src="file://C:/Users/zxr/Desktop/20171110220150226.jpg">
+    <h1>index</h1>
 </body>
 </html>
