--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>晏珊珊，我爱你！</title>
+    <title>Hello,world!</title>
 </head>
 <body>
-    <h1>晏珊珊，我爱你！</h1>
-    <h2>晏珊珊，我爱你！</h2>
-    <h3>晏珊珊，我爱你！</h3>
-    <h4>晏珊珊，我爱你！</h4>
-    <h5>晏珊珊，我爱你！</h5>
-    <h6>晏珊珊，我爱你！</h6>
+    <h1>Hello,world!</h1>
+    <h2>Hello,world!</h2>
+    <h3>Hello,world!</h3>
+    <h4>Hello,world!</h4>
+    <h5>Hello,world!</h5>
+    <h6>Hello,world!</h6>
 </body>
 </html>
