--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,60 @@
-<!DOCTYPE html>
+<!doctype html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Hello,world!</title>
-</head>
+<!--Header-->
+<head th:replace="common::header('主页')">
+
 <body>
-    <h1>Hello,world!</h1>
-    <h2>Hello,world!</h2>
-    <h3>Hello,world!</h3>
-    <h4>Hello,world!</h4>
-    <h5>Hello,world!</h5>
-    <h6>Hello,world!</h6>
+    <!-- 导航栏 -->
+    <div th:include="common::nav"></div>
+
+    <!--Slide轮播-->
+    <div id="demo" class="carousel slide" data-ride="carousel">
+      <!-- 指示符 -->
+      <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" class="active"></li>
+        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#demo" data-slide-to="2"></li>
+      </ul>
+      <!-- 轮播图片 -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/images/aa.jpg">
+          <div class="carousel-caption">
+            <h3>我们的征途是星辰大海！</h3>
+            <p>描述文字!</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="/images/bb.jpg">
+          <div class="carousel-caption">
+            <h3>第二张图片描述标题</h3>
+            <p>描述文字!</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="/images/aa.jpg">
+          <div class="carousel-caption">
+            <h3>第三张图片描述标题</h3>
+            <p>描述文字!</p>
+          </div>
+        </div>
+      </div>
+      <!-- 左右切换按钮 -->
+      <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+    </div>
+
+    <!-- 底部内容 -->
+    <div class="jumbotron text-center" style="margin-bottom:0">
+      <p>底部内容</p>
+    </div>
+
+    <!--Footer-->
+    <div th:include="common::footer"></div>
 </body>
 </html>
