添加空气质量检测

--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -51,11 +51,14 @@
                         <a class="nav-link" href="http://39.106.170.35/swagger-ui.html" target="_blank">API接口</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/me.html">我的博客</a>
+                        <a class="nav-link" href="/me.html">关于我</a>
                     </li>
                 </ul>
                 <!-- 右侧控件 -->
                 <ul class="navbar-nav justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link" href="http://39.106.170.35：61680">Apollo 控制台</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/console.html">控制台</a>
                     </li>
